--- a/package.json
+++ b/package.json
@@ -3,12 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.11.8",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "avataaars": "^2.0.0",
+    "axios": "^1.3.2",
+    "ethers": "^6.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-flip-move": "^3.0.5",
     "react-scripts": "5.0.1",
+    "react-twitter-embed": "^4.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
